# cpp-lint-combine

./: CMakeLists.txt  CallTotals.h  ClangTidyWrapper.cpp  ClangTidyWrapper.h  ClazyWrapper.cpp  ClazyWrapper.h  Factory.h  FactoryBase.cpp  FactoryBase.h  LinterBase.cpp  LinterBase.h  LinterCombine.cpp  LinterCombine.h  LinterItf.h  LinterSwitch.cpp  LinterSwitch.h  LinterWrapperBase.cpp  LinterWrapperBase.h  LinterWrapperItf.h  LinterWrapperUtils.cpp  LinterWrapperUtils.h  README.md  StandardFactory.cpp  StandardFactory.h  UsualFactory.cpp  UsualFactory.h  cpp-lint-combine.cmd  cpp-lint-combine.sh  lintWrapperUtils.cpp  lintWrapperUtils.h  main.cpp  version.rc  version.rc.in  version.rsrc.in
.github/workflows/: main.yaml
Tests/: CMakeLists.txt  simpleTest.cpp
Tests/mockPrograms/: mockParallelTest_1.sh  mockParallelTest_2.sh  mockReturn0.sh  mockReturn0AndWriteToFile.sh  mockReturn0AndWriteToStreamsAndToFile.sh  mockReturn0WriteToFile_1.sh  mockReturn0WriteToFile_2.bat  mockReturn0WriteToStreamsWriteToFile_1.bat  mockReturn0WriteToStreamsWriteToFile_1.sh  mockReturn0WriteToStreams_1.bat  mockReturn0WriteToStreams_1.sh  mockReturn0WriteToStreams_2.bat  mockReturn0WriteToStreams_2.sh  mockReturn1.sh  mockReturn1WriteToStreams_1.sh  mockReturn1WriteToStreams_2.sh  mockSleepAndRemoveFile.sh  mockTerminated.sh  mockTerminatedWriteToStreams_1.sh  mockTerminatedWriteToStreams_2.sh
Tests/src/: simpleTest.cpp
Tests/yamlFiles/: clangTidy.yaml  linterFile_2.yaml  linterFile_2_save.yaml
clang_tidy_wrapper/: CMakeLists.txt  main.cpp
src/: CallTotals.h  ClangTidyBehavior.cpp  ClangTidyBehavior.h  ClangTidyWrapper.cpp  ClangTidyWrapper.h  ClazyBehavior.cpp  ClazyBehavior.h  ClazyWrapper.cpp  ClazyWrapper.h  Diagnostic.h  DiagnosticOutputHelper.cpp  DiagnosticOutputHelper.h  DiagnosticWorker.cpp  DiagnosticWorker.h  FactoryBase.h  IdeBehaviorBase.cpp  IdeBehaviorBase.h  IdeBehaviorItf.h  IdeTraitsFactory.cpp  IdeTraitsFactory.h  LintCombineException.h  LintCombineUtils.cpp  LintCombineUtils.h  LinterBase.cpp  LinterBase.h  LinterBehaviorItf.h  LinterCombine.cpp  LinterCombine.h  LinterFactoryBase.cpp  LinterFactoryBase.h  LinterItf.h  OutputHelper.cpp  OutputHelper.h  PrepareCmdLineBase.cpp  PrepareCmdLineBase.h  PrepareCmdLineCLion.cpp  PrepareCmdLineCLion.h  PrepareCmdLineFactory.cpp  PrepareCmdLineFactory.h  PrepareCmdLineItf.h  (+20 more)
src/msvc-shim/: msvc-shim.cpp
test/: CMakeLists.txt
test/CLionTestsMacros/archMacrosDontSpecified/: macros
test/CLionTestsMacros/arm/: macros_save
test/CLionTestsMacros/arm64/: macros
test/CLionTestsMacros/severalDifferentArchSpecified/: macros
test/CLionTestsMacros/x64/: macros_save
test/CLionTestsMacros/x86/: macros
test/mockPrograms/: createFileByExportFixesParam.sh  mockForLOFTest.sh  mockParallelTest_1.sh  mockParallelTest_2.sh  mockReturn0WriteToFile_1.bat  mockReturn0WriteToFile_2.sh  mockReturn0WriteToStreamsWriteToFile_2.bat  mockReturn0WriteToStreamsWriteToFile_2.sh  mockReturn0WriteToStreams_1.sh  mockReturn1WriteToStreams_1.bat  mockReturn1WriteToStreams_2.bat  mockTerminatedWriteToStreams_1.sh  mockWriteASCIIToStdout.sh  mockWriteCP437ToStdout.sh  mockWriteToFile.cmd  mockWriteToFile.sh  mockWriteToStdoutAndTerminate.sh  mockWriteToStreams.bat  mockWriteToStreams.cmd  mockWriteToStreams.sh  mockWriteToStreamsAndToFile.cmd  mockWriteToStreamsAndToFile.sh  mockWriteUnicodeToStdout.sh
test/rspFiles/: rsp_1_result.rsp  rsp_1_src.rsp
test/src/: simpleTest.cpp
test/yamlFiles/: combinedResult_expected.yaml  combinedResult_save.yaml  linterFile_1_expected.yaml  linterFile_1_result.yaml  linterFile_1_save.yaml  linterFile_2.yaml  linterFile_2_expected.yaml  linterFile_2_result.yaml
